--- a/Prototypes/Prototype Case Study 1 (Financian)/README
+++ b/Prototypes/Prototype Case Study 1 (Financian)/README
@@ -1,8 +1,11 @@
-Financian
+<h1> Financian </h1>
 Personal financial planner App
 
 The idea behind this app is to make younger generation tend to manage their finance well. 
 Also I hope this app can help user to track their expenses, create monthly budgeting, and help them create a financial habit
+
+Access clickable prototype on:
+http://bit.ly/financianprototype
 
 This is my personal project
 2020
