--- a/Prototypes/Prototype Case Study 1 (Financian)/README
+++ b/Prototypes/Prototype Case Study 1 (Financian)/README
@@ -1,4 +1,4 @@
-<h1> Financian </h1>
+Financian
 Personal financial planner App
 
 The idea behind this app is to make younger generation tend to manage their finance well. 
