--- a/Prototypes/Prototype Case Study 2 (Parkin)/README
+++ b/Prototypes/Prototype Case Study 2 (Parkin)/README
@@ -4,5 +4,8 @@ Smart Parking App
 The idea behind this app is to make easier parking experience. 
 Park your car easily, and save time happily. Pay seamlessly with multiple payment methods
 
+Access clikable prototype on:
+http://bit.ly/parkinprototype
+
 This is a team project: dewinna, arlin , m. fachry, m. asep, arnold, utami
 2019
